--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/eggs.png
+    - asset/bread.png
+    - asset/fried_bread.png
+    - asset/fried_egg.png
+    - asset/noodle.png
+    - asset/vegettable.png
 
 
 
